# otb-bv

./: .gitignore  .travis.yml  CMakeLists.txt  ci.cmake  otb-module.cmake
CI/: Dockerfile  activate_env_ci.sh  configure_otb_for_bv.cmake  validation_ci.cfg
app/: CMakeLists.txt  otbBVImageInversion.cxx  otbBVInputVariableGeneration.cxx  otbBVInputVariableGeneration.h  otbBVInverseModelLearning.cxx  otbBVInversion.cxx  otbBVTimeProfileReprocessing.cxx  otbInverseModelLearning.cxx  otbProSailSimulator.cxx  otbProfileReprocessing.cxx
data/: Sentinel2_10m_20m.rsr  Sentinel2_10m_20m_noblue.rsr  Sentinel2_10m_noblue.rsr  Sentinel2_10m_swir.rsr  Sentinel2_10m_swir_noblue.rsr  Sentinel2_Soils.csv  Sentinel2_noblue.rsr  Venus_generateLAI.rsr  appBvGenInputVarssamples.txt  appInvMod.txt  appProSailCovarMatrix.txt  appProSailSimus.txt  bvCovarFile.txt  formosat2_3b.rsr  landsat8_generateLAI.rsr  landsat8_nopan.rsr  landsat8_nopan_nocoastal.rsr  landsat8_nopan_nocoastal_noblue.rsr  plot_bvMultiT.gpl  relfs_sim.txt  sentinel2_10m.rsr  sentinel2_10m_20m.rsr  sentinel2_10m_20m_noblue.rsr  sentinel2_10m_20m_noblue_nob8.rsr  sentinel2_10m_noblue.rsr  sentinel2_10m_swir.rsr  sentinel2_10m_swir_noblue.rsr  sentinel2_noblue.rsr
documentation/: BVnet_files_content_description  Notes_bv_net.md  Notes_validation.md  README_bv_net_ENG.md  README_bv_net_FR.md  README_generateLAI.txt  README_generateLAI_ENG.md  README_validation_ENG.md  otb-bv-manual.org  prospect.txt
include/: otbBVEstimation.h  otbBVTypes.h  otbBVUtil.h  otbBVUtil.txx  otbMultiLinearRegressionModel.h  otbMultiLinearRegressionModel.txx  otbNeuralNetworkRegressionMachineLearningModel.txx  otbProSailSimulatorFunctor.h  otbProfileReprocessing.h  otbSolarIrradianceFAPAR.h
scripts/: activate_env.sh  bv_net.py  config-example.cfg  config-example_generateLAI.cfg  config.json  dummy_data.py  formosat_data.py  formosat_data_noblue.py  generate_LAI.py  generate_rsr_file.py  l8_4b_fr_data.py  l8_no_pan_fr_data.py  l8_no_pan_no_coastal_no_blue_fr_data.py  l8_nopan_ukr_data.py  landsat2015_data.py  landsat_data.py  ltt  muscateXMLParser.py  parameter-sweep-job-array.sh  plot_estimated_vs_field_LAI.m  plot_validation_gt_pdf.m  rsr_select_bands.py  s2_10m_noblue_ukr_data.py  s2_10m_ukr_data.py  s2_allbands_fr_data.py  s2_allbands_noblue_fr_data.py  s2_allbands_noblue_noB8a_ukr_data.py  s2_allbands_noblue_ukr_data.py  s2_allbands_ukr_data.py  scatterplots.py  sen2corXMLParser.py  stt  test_generated_LAI.py  tt  validation.py  validation_example.cfg
src/: CMakeLists.txt  otbBVUtil.cxx
src/applications/: CMakeLists.txt  otbBVImageInversion.cxx  otbBVInputVariableGeneration.cxx  otbBVInputVariableGeneration.h  otbBVInversion.cxx  otbBVTypes.h  otbBVUtil.h  otbInverseModelLearning.cxx  otbProSailSimulator.cxx  otbProfileReprocessing.cxx  otbSVRBVInversion.cxx  otbSVRInverseModelLearning.cxx  testSimus.cxx
src/scripts/: bv-net.py  bv_net.py  config-example.cfg  formosat_data.py  landsat2015_data.py  landsat_data.py  parameter-sweep-job-array.sh  parameter-sweep.py  scatterplots.py  spot4_data.py  spot5_data.py  validation.py  validation_example.cfg
src/testing/: CMakeLists.txt  an-par-sweep.cxx  bvLaiLogNdviTest.cxx  bvMultiLinearFitting.cxx  bvMultiTemporalInversion.cxx  bvProSailSimulatorFunctor.cxx  bvVariableGenerationTests.cxx  otbBVTests.cxx
test/: CMakeLists.txt  an-par-sweep.cxx  bvMultiLinearFitting.cxx  bvMultiTemporalInversion.cxx  bvProSailSimulatorFunctor.cxx  bvValidityDomainTests.cxx  otbBVTests.cxx
